[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = "Solutions for Advent of Code 2023"
authors = ["Kyrylo Korablov <kyrylo.korablov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
