[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = "Solutions for Advent of Code 2023"
authors = ["Kyrylo Korablov <kyrylo.korablov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
mypy = "^1.7.1"

[tool.ruff]
src = ["app"]
exclude = [
    ".git",
    "build",
    "dist",
    "venv",
    ".venv",
    "docs",
    "tests",
    "dev",
    "scripts",
    "*.egg-info",
]
target-version = "py310"
line-length = 88
indent-width = 4
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D103", "D104", "D203", "D206", "D213", "W191"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.10"
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
